fix overflow on meteor shower div

--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -91,5 +91,10 @@
         min-height: none;
         padding: 0;
     }
+
+	.meteorShower {
+		
+        overflow-x: hidden;
+	}
 } 
 
